[project]
name = "invisible-spectrum-env"
version = "0.1.0"
description = "Invisible Spectrum Environment"
authors = [{name = "A Priyadharshan"}]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "openenv-core>=0.2.0",
    "openai"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
